Refactor: consolidate WebSearch config and add e2e test
- Introduce WebSearchConf interface to group all WebSearch constants
  (ENGINE, MAX_RESULTS, WHITELIST_DOMAINS) following the OpenAiConf pattern,
  replacing scattered public static final Strings across WebSearchCollector,
  WebSearchTool, and WhitelistDomainFilter

- Default Engine to "duckduckgo" in variables.yaml for deterministic
  behavior instead of relying on first available engine

- Replace Collections.emptyList() with List.of() in WebSearchCollector

- Add WebSearchIT e2e test to verify DuckDuckGo engine is reachable

- Add missing langchain4j-http-client-jdk exclusion in
  smart-workflow-gemini pom.xml to fix HTTP client classpath conflict