@@ -1,6 +1,5 @@
 package com.axonivy.utils.smart.workflow.tools.web;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -14,8 +13,6 @@ import ch.ivyteam.ivy.environment.Ivy;
 
 public class WebSearchCollector {
 
-  public static final String ENGINE = "AI.Tool.WebSearch.Engine";
-
   public static List<SmartWebSearchEngine> allEngines() {
     var project = SpiProject.getSmartWorkflowPmv().project();
     return new SpiLoader(project).load(SmartWebSearchEngineProvider.class)
@@ -25,7 +22,7 @@ public class WebSearchCollector {
   }
 
   public static Optional<SmartWebSearchEngine> findEngine() {
-    var configured = StringUtils.trimToEmpty(Ivy.var().get(ENGINE));
+    var configured = StringUtils.trimToEmpty(Ivy.var().get(WebSearchConf.ENGINE));
     var engines = allEngines();
     if (!configured.isEmpty()) {
       return engines.stream()
@@ -40,7 +37,7 @@ public class WebSearchCollector {
       return provider.getEngines();
     } catch (Exception e) {
       Ivy.log().error("Failed to load engines from provider: " + provider.name(), e);
-      return Collections.emptyList();
+      return List.of();
     }
   }
 }
